MET-1420 testing using gradle